added css styles

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="SDC260, Web Interface Design" />
     <meta name="author" content="Alex James" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -14,17 +16,19 @@
       <h1>Welcome page visitors!</h1>
 
       <!-- Nav menu. No internal pages yet so the links don't go anywhere -->
-      <ul>
-        <li>
-          <a href="#">Internal link 1</a>
-        </li>
-        <li>
-          <a href="#">Internal link 2</a>
-        </li>
-        <li>
-          <a href="#">Internal link 3</a>
-        </li>
-      </ul>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">Internal link 1</a>
+          </li>
+          <li>
+            <a href="#">Internal link 2</a>
+          </li>
+          <li>
+            <a href="#">Internal link 3</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main>
