--- a/index.html
+++ b/index.html
@@ -40,6 +40,38 @@
       <section>
         <header>Projects</header>
         <p>Projects placeholder text</p>
+        <table>
+          <caption>
+            My Projects
+          </caption>
+          <colgroup>
+            <col style="background-color: #e0f7fa" />
+            <col />
+            <col style="background-color: #e0f7fa" />
+          </colgroup>
+          <thead>
+            <tr>
+              <th>Project Name</th>
+              <th>Description</th>
+              <th>Image</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Portfolio Website</td>
+              <td>A personal portfolio website to show my skills</td>
+              <td><img src="#" alt="Placeholder 1" /></td>
+            </tr>
+            <tr>
+              <td>Todo App</td>
+              <td>A simple checklist app</td>
+              <td><img src="#" alt="Placeholder 2" /></td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <td colspan="3">Footer content</td>
+          </tfoot>
+        </table>
       </section>
       <section>
         <header>Contact</header>
